# distributed-training-learning

./: .gitignore  README.md  pyproject.toml
logs/: ddp_rank-0.json  ddp_rank-1.json
src/: config.py  ddp_train.py  model.py  models.py  msg_pass.py  pp_train.py  tp_train.py  utils.py
